[package]
name    = "gresql"
version = "0.1.0"
edition = "2021"
description = "A command line interface for searching SQL files for specific statements"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap          = { version = "4.0", features = ["derive"] }
exitcode      = "1.1.2"
glob          = "0.3.1"
regex         = "1"
grep-matcher  = "0.1.6"
grep-regex    = "0.1.11"
grep-searcher = "0.1.11"
